# Benchmarking-SLMs-with-Polars

./: README.md  benchmark_history.json  benchmark_history_2.json  helpers.py  main.py  providers.py  pyproject.toml  questions.py
data/: benchmark_data.py  expected_answers.json
data/datasets/: customers.csv  events.csv  order_items.csv  orders.csv  products.csv
dockerfiles/: Dockerfile  Dockerfile.executor  readme.md
frontend/: main.py  main2.py
test/: bench.py
